Add properties CRUD
